2010-05-04 Improve backend_qt4 so it displays figures with the
           correct size - DSD

2010-04-20 Added generic support for connecting to a timer for events. This
           adds TimerBase, TimerGTK, TimerQT, TimerWx, and TimerTk to
           the backends and a new_timer() method to each backend's
           canvas to allow ease of creating a new timer. - RM

2010-04-20 Added margins() Axes method and pyplot function. - EF

2010-04-18 update the axes_grid documentation. -JJL

2010-04-18 Control MaxNLocator parameters after instantiation,
           and via Axes.locator_params method, with corresponding
           pyplot function. -EF

2010-04-18 Control ScalarFormatter offsets directly and via the
           Axes.ticklabel_format() method, and add that to pyplot. -EF

2010-04-16 Add a close_event to the backends. -RM

2010-04-06 modify axes_grid examples to use axes_grid1 and axisartist. -JJL

2010-04-06 rebase axes_grid using axes_grid1 and axisartist modules. -JJL

2010-04-06 axes_grid toolkit is splitted into two separate modules,
           axes_grid1 and axisartist. -JJL

2010-04-05 Speed up import: import pytz only if and when it is
           needed.  It is not needed if the rc timezone is UTC. - EF

2010-04-03 Added color kwarg to Axes.hist(), based on work by
           Jeff Klukas. - EF

2010-03-24 refactor colorbar code so that no cla() is necessary when
           mappable is changed. -JJL

2010-03-22 fix incorrect rubber band during the zoom mode when mouse
           leaves the axes. -JJL

2010-03-21 x/y key during the zoom mode only changes the x/y limits. -JJL

2010-03-20 Added pyplot.sca() function suggested by JJL. - EF

2010-03-20 Added conditional support for new Tooltip API in gtk backend. - EF

2010-03-20 Changed plt.fig_subplot() to plt.subplots() after discussion on
           list, and changed its API to return axes as a numpy object array
           (with control of dimensions via squeeze keyword). FP.
