@@ -1,0 +1,20 @@
+import matplotlib.pyplot as plt
+
+def make_ticklabels_invisible(fig):
+    for i, ax in enumerate(fig.axes):
+        ax.text(0.5, 0.5, "ax%d" % (i+1), va="center", ha="center")
+        for tl in ax.get_xticklabels() + ax.get_yticklabels():
+            tl.set_visible(False)
+
+
+plt.figure(0)
+ax1 = plt.subplot2grid((3,3), (0,0), colspan=3)
+ax2 = plt.subplot2grid((3,3), (1,0), colspan=2)
+ax3 = plt.subplot2grid((3,3), (1, 2), rowspan=2)
+ax4 = plt.subplot2grid((3,3), (2, 0))
+ax5 = plt.subplot2grid((3,3), (2, 1))
+
+plt.suptitle("subplot2grid")
+make_ticklabels_invisible(plt.gcf())
+plt.show()
+
