@@ -1,3 +1,5 @@
+2010-05-18 Merge mpl_toolkits.gridspec into the main tree. - JJL
+
 2010-05-04 Improve backend_qt4 so it displays figures with the
            correct size - DSD
 
